--- a/index.html
+++ b/index.html
@@ -18,17 +18,17 @@
             <div class="mb-3">
               <label for="firstName" class="form-label">First Name</label>
               <input type="text" class="form-control" id="firstName" aria-describedby="">
-              <span id="firstNameError"></span>
+              <span  class="text-danger" id="firstNameError"></span>
             </div>
             <div class="mb-3">
               <label for="lastName" class="form-label">Last Name</label>
               <input type="text" class="form-control" id="lastName" aria-describedby="">
-              <span id="lastNameError"></span>
+              <span class="text-danger" id="lastNameError"></span>
             </div>
            <div class="mb-3">
              <label for="inputEmail1" class="form-label">Email address</label>
              <input type="email" class="form-control" id="inputEmail1" aria-describedby="">
-             <span id="inputEmail1Error"></span>
+             <span  class="text-danger" id="inputEmail1Error"></span>
            </div>
            <div class="mb-3">
              <label for="Password1" class="form-label">Password</label>
