--- a/index.html
+++ b/index.html
@@ -41,8 +41,8 @@
               <span id="confirmPassword1Error"></span>
            </div>
             <div class="mb-3">
-                <select class="form-select" aria-label="Default select example">
-                    <option selected>Open this select menu</option>
+                <select  id="district-name" class="form-select" aria-label="Default select example">
+                    <option value=" ">Open this select menu</option>
                     <option value="Dhaka">Dhaka</option>
                     <option value="Rajshahi">Rajshahi</option>
                     <option value="Khulna">Khulna</option>
